src/snapshots/enderpy__lexer__tests__bytes-literals-1.snap
---
source: src/lexer.rs
description: "b\"world\""
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
