src/snapshots/enderpy__lexer__tests__bytes-literals-3.snap
---
source: src/lexer.rs
description: "a = b\"hello\""
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: Bytes,
        value: String(
            "b\"hello\"",
        ),
    },
]
