src/snapshots/enderpy__lexer__tests__bytes-literals-4.snap
---
source: src/lexer.rs
description: "b'hello'"
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b'hello'",
        ),
        start: 0,
        end: 8,
    },
]
