src/snapshots/enderpy__lexer__tests__f-string-literals-1.snap
---
source: src/lexer.rs
description: "f\"world\""
---
[
    Token {
        kind: FString,
        value: String(
            "f\"world\"",
        ),
    },
]
