src/snapshots/enderpy__lexer__tests__f-string-literals-4.snap
---
source: src/lexer.rs
description: "f'hello_{var}'"
---
[
    Token {
        kind: FString,
        value: String(
            "f'hello_{var}'",
        ),
    },
]
